--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="main">
     <h1 class="logo">amos<span id="rid">rid</span></h1>
     <h1>saya adalah <span class="cr">mahasiswa</span> <br> semester 3</h1>
-    <div class="left card"><img class="tile-image" src="../pict/WhatsApp Image 2023-07-16 at 08.24.21.jpeg" alt="hand and flower in water">
+    <div class="left card"><img class="tile-image" src="WhatsApp Image 2023-07-16 at 08.24.21.jpeg" alt="hand and flower in water">
       <h2 class="card-title">Sugar glider</h2> 
       <p class="card-text">The sugar glider (Petaurus breviceps) is a small, omnivorous, arboreal, and nocturnal gliding possum</p>
     </div>
 
-    <div class="right card"><img class="tile-image" src="../pict/WhatsApp Image 2023-07-16 at 08.25.52.jpeg" alt="metal structure">
+    <div class="right card"><img class="tile-image" src="WhatsApp Image 2023-07-16 at 08.25.52.jpeg" alt="metal structure">
       <h2 class="card-title">mie gila</h2>
       <p>mie gila dalam wadah bangsat </p>
     </div>
